--- a/html/index.html
+++ b/html/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style src='index: .css;'></style>
+    <link rel="stylesheet" href="./index.css" type='text/css'/>
+    <script type="text/javascript" src="./index.js"></script>
 </head>
 <body>
-    <script   src="https://code.jquery.com/jquery-3.6.0.min.js"   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="   crossorigin="anonymous"></script>
+    <h1>Hola Mundo</h1>
     <div id="map"></div>
-    <script type="text/javascript" src="index.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAthHie5ZktmV4Fb7U7izn6WGq6IRFQQug"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="   crossorigin="anonymous"></script>
     <script>
         var url = `http://localhost:5000/`;
         $.ajax({
@@ -22,5 +22,6 @@
             }
         });
     </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAthHie5ZktmV4Fb7U7izn6WGq6IRFQQug"></script>
 </body>
 </html>
