--- a/html/index.html
+++ b/html/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./index.css" type='text/css'/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <script type="text/javascript" src="./index.js"></script>
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+    <h1 id="title">Incidentes Viales en la Ciudad de Medellin</h1>
+    <span></span>
     <div id="map"></div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="   crossorigin="anonymous"></script>
     <script>
