--- a/html/index.html
+++ b/html/index.html
@@ -13,11 +13,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<<<<<<< HEAD
     <h1 id="title">Incidentes Viales en la Ciudad de Medellin</h1>
     <span></span>
-=======
-    <h1>Hola Mundo</h1>
     <form>
         <div class="row col-md-6">
           <label for="cluster0" class="form-label">Cluster</label>
@@ -41,11 +38,11 @@
           </div>
         </div>
         <div class="col-md-6">
-            <label for="herido" class="form-label">Gravedad de accidente</label>
+            <label for="heridos" class="form-label">Gravedad de accidente</label>
             <div class="form-group">
-              <input class="form-check-input" type="checkbox" id="herido" checked>
-              <label class="form-check-label" for="herido">
-                Herido
+              <input class="form-check-input" type="checkbox" id="heridos" checked>
+              <label class="form-check-label" for="heridos">
+                Heridos
               </label>
               <input class="form-check-input" type="checkbox" id="muertos" checked>
               <label class="form-check-label" for="muertos">
@@ -58,11 +55,11 @@
             <div class="form-group">
               <input class="form-check-input" type="checkbox" id="acompanante" checked>
               <label class="form-check-label" for="acompanante">
-                Acompañante de motociclete
+                Acompañante de motocicleta
               </label>
-              <input class="form-check-input" type="checkbox" id="clicista" checked>
-              <label class="form-check-label" for="clicista">
-                Clicista
+              <input class="form-check-input" type="checkbox" id="ciclista" checked>
+              <label class="form-check-label" for="ciclista">
+                Ciclista
               </label>
               <input class="form-check-input" type="checkbox" id="conductor" checked>
               <label class="form-check-label" for="conductor">
@@ -128,7 +125,7 @@
               </label>
               <input class="form-check-input" type="checkbox" id="grupoEdad8" checked>
               <label class="form-check-label" for="grupoEdad8">
-                80 - más
+                80 o mas
               </label>
             </div>
         </div>
@@ -150,9 +147,8 @@
             </div>
         </div>
         <br>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button id="button" type="submit" class="btn btn-primary">Submit</button>
       </form>
->>>>>>> bd2fb874242a21f40083965d5ee8e426edbb103d
     <div id="map"></div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="   crossorigin="anonymous"></script>
     <script>
