--- a/html/index.html
+++ b/html/index.html
@@ -1,161 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./index.css" type='text/css'/>
+    <link rel="stylesheet" href="./index.css" type='text/css' />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
 <body>
     <h1 id="title">Incidentes Viales en la Ciudad de Medellin</h1>
     <span></span>
-    <form>
-        <div class="row col-md-6">
-          <label for="cluster0" class="form-label">Cluster</label>
-          <div class="form-group">
-            <input class="form-check-input" type="checkbox" id="cluster0" checked>
-            <label class="form-check-label" for="cluster0">
-              0
-            </label>
-            <input class="form-check-input" type="checkbox" id="cluster1" checked>
-            <label class="form-check-label" for="cluster1">
-              1
-            </label>
-            <input class="form-check-input" type="checkbox" id="cluster2" checked>
-            <label class="form-check-label" for="cluster2">
-              2
-            </label>
-            <input class="form-check-input" type="checkbox" id="cluster3" checked>
-            <label class="form-check-label" for="cluster3">
-              3
-            </label>
-          </div>
-        </div>
-        <div class="col-md-6">
-            <label for="heridos" class="form-label">Gravedad de accidente</label>
-            <div class="form-group">
-              <input class="form-check-input" type="checkbox" id="heridos" checked>
-              <label class="form-check-label" for="heridos">
-                Heridos
-              </label>
-              <input class="form-check-input" type="checkbox" id="muertos" checked>
-              <label class="form-check-label" for="muertos">
-                Muertos
-              </label>
+    <div class="container">
+        <div class="row">
+            <div class="col-7">
+                <div id="map"></div>
+            </div>
+            <div class="col">
+                <form id="form" action="">
+                    <div class="row col-md-6">
+                        <label for="cluster0" class="form-label"><strong>Cluster</strong></label>
+                        <div class="form-group">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="cluster0" checked>
+                                <label class="form-check-label" for="cluster0">
+                                    0
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="cluster1" checked>
+                                <label class="form-check-label" for="cluster1">
+                                    1
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="cluster2" checked>
+                                <label class="form-check-label" for="cluster2">
+                                    2
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="cluster3" checked>
+                                <label class="form-check-label" for="cluster3">
+                                    3
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="herido" class="form-label"><strong>Gravedad de accidente</strong></label>
+                        <div class="form-group">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="herido" checked>
+                                <label class="form-check-label" for="herido">
+                                    Heridos
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="muertos" checked>
+                                <label class="form-check-label" for="muertos">
+                                    Muertos
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="acompañante" class="form-label"><strong>Condición del sujeto</strong></label>
+                        <div class="form-group">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="acompanante" checked>
+                                <label class="form-check-label" for="acompanante">
+                                    Acompañante de motocicleta
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="clicista" checked>
+                                <label class="form-check-label" for="clicista">
+                                    Clicista
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="conductor" checked>
+                                <label class="form-check-label" for="conductor">
+                                    Conductor
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="motociclista" checked>
+                                <label class="form-check-label" for="motociclista">
+                                    Motociclista
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="pasajero" checked>
+                                <label class="form-check-label" for="pasajero">
+                                    Pasajero
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="peaton" checked>
+                                <label class="form-check-label" for="peaton">
+                                    Peatón
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="masculino" class="form-label"><strong>Sexo</strong></label>
+                        <div class="form-group">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="masculino" checked>
+                                <label class="form-check-label" for="masculino">
+                                    Masculino
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="femenino" checked>
+                                <label class="form-check-label" for="femenino">
+                                    Femenino
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="grupoEdad1" class="form-label"><strong>Edad</strong></label>
+                        <div class="form-group">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="grupoEdad1" checked>
+                                <label class="form-check-label" for="grupoEdad1">
+                                    0 - 9
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="grupoEdad2" checked>
+                                <label class="form-check-label" for="grupoEdad2">
+                                    20 - 29
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="grupoEdad3" checked>
+                                <label class="form-check-label" for="grupoEdad3">
+                                    30 - 39
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="grupoEdad4" checked>
+                                <label class="form-check-label" for="grupoEdad4">
+                                    40 - 49
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="grupoEdad5" checked>
+                                <label class="form-check-label" for="grupoEdad5">
+                                    50 - 59
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="grupoEdad6" checked>
+                                <label class="form-check-label" for="grupoEdad6">
+                                    60 - 69
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="grupoEdad7" checked>
+                                <label class="form-check-label" for="grupoEdad7">
+                                    70 - 79
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="grupoEdad8" checked>
+                                <label class="form-check-label" for="grupoEdad8">
+                                    80 - más
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="año2019" class="form-label"><strong>Año</strong></label>
+                        <div class="form-group">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="año2019" checked>
+                                <label class="form-check-label" for="año2019">
+                                    2019
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="año2020" checked>
+                                <label class="form-check-label" for="año2020">
+                                    2020
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="año2021" checked>
+                                <label class="form-check-label" for="año2021">
+                                    2021
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <button id="button" type="submit" class="btn btn-primary">Submit</button>
+                </form>
             </div>
         </div>
-        <div class="col-md-6">
-            <label for="acompañante" class="form-label">Condición del sujeto</label>
-            <div class="form-group">
-              <input class="form-check-input" type="checkbox" id="acompanante" checked>
-              <label class="form-check-label" for="acompanante">
-                Acompañante de motocicleta
-              </label>
-              <input class="form-check-input" type="checkbox" id="ciclista" checked>
-              <label class="form-check-label" for="ciclista">
-                Ciclista
-              </label>
-              <input class="form-check-input" type="checkbox" id="conductor" checked>
-              <label class="form-check-label" for="conductor">
-                Conductor
-              </label>
-              <input class="form-check-input" type="checkbox" id="motociclista" checked>
-              <label class="form-check-label" for="motociclista">
-                Motociclista
-              </label>
-              <input class="form-check-input" type="checkbox" id="pasajero" checked>
-              <label class="form-check-label" for="pasajero">
-                Pasajero
-              </label>
-              <input class="form-check-input" type="checkbox" id="peaton" checked>
-              <label class="form-check-label" for="peaton">
-                Peatón
-              </label>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <label for="masculino" class="form-label">Sexo</label>
-            <div class="form-group">
-              <input class="form-check-input" type="checkbox" id="masculino" checked>
-              <label class="form-check-label" for="masculino">
-                Masculino
-              </label>
-              <input class="form-check-input" type="checkbox" id="femenino" checked>
-              <label class="form-check-label" for="femenino">
-                Femenino
-              </label>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <label for="grupoEdad1" class="form-label">Edad</label>
-            <div class="form-group">
-              <input class="form-check-input" type="checkbox" id="grupoEdad1" checked>
-              <label class="form-check-label" for="grupoEdad1">
-                0 - 9
-              </label>
-              <input class="form-check-input" type="checkbox" id="grupoEdad2" checked>
-              <label class="form-check-label" for="grupoEdad2">
-                20 - 29
-              </label>
-              <input class="form-check-input" type="checkbox" id="grupoEdad3" checked>
-              <label class="form-check-label" for="grupoEdad3">
-                30 - 39
-              </label>
-              <input class="form-check-input" type="checkbox" id="grupoEdad4" checked>
-              <label class="form-check-label" for="grupoEdad4">
-                40 - 49
-              </label>
-              <input class="form-check-input" type="checkbox" id="grupoEdad5" checked>
-              <label class="form-check-label" for="grupoEdad5">
-                50 - 59
-              </label>
-              <input class="form-check-input" type="checkbox" id="grupoEdad6" checked>
-              <label class="form-check-label" for="grupoEdad6">
-                60 - 69
-              </label>
-              <input class="form-check-input" type="checkbox" id="grupoEdad7" checked>
-              <label class="form-check-label" for="grupoEdad7">
-                70 - 79
-              </label>
-              <input class="form-check-input" type="checkbox" id="grupoEdad8" checked>
-              <label class="form-check-label" for="grupoEdad8">
-                80 o mas
-              </label>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <label for="año2019" class="form-label">Año</label>
-            <div class="form-group">
-              <input class="form-check-input" type="checkbox" id="año2019" checked>
-              <label class="form-check-label" for="año2019">
-                2019
-              </label>
-              <input class="form-check-input" type="checkbox" id="año2020" checked>
-              <label class="form-check-label" for="año2020">
-                2020
-              </label>
-              <input class="form-check-input" type="checkbox" id="año2021" checked>
-              <label class="form-check-label" for="año2021">
-                2021
-              </label>
-            </div>
-        </div>
-        <br>
-        <button id="button" type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    <div id="map"></div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="   crossorigin="anonymous"></script>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script>
         var url = `http://localhost:5000/`;
         $.ajax({
             type: `GET`,
             url: url,
-            success: function(response) {
+            success: function (response) {
                 initMap(response);
             }
         });
