--- a/html/index.html
+++ b/html/index.html
@@ -57,8 +57,8 @@
                         <label for="herido" class="form-label"><strong>Gravedad de accidente</strong></label>
                         <div class="form-group">
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="herido" checked>
-                                <label class="form-check-label" for="herido">
+                                <input class="form-check-input" type="checkbox" id="heridos" checked>
+                                <label class="form-check-label" for="heridos">
                                     Heridos
                                 </label>
                             </div>
@@ -80,8 +80,8 @@
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="clicista" checked>
-                                <label class="form-check-label" for="clicista">
+                                <input class="form-check-input" type="checkbox" id="ciclista" checked>
+                                <label class="form-check-label" for="ciclista">
                                     Clicista
                                 </label>
                             </div>
@@ -211,6 +211,9 @@
         </div>
     </div>
 
+    <canvas class="background"></canvas>
+    <script src="path/to/particles.min.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script>
@@ -225,5 +228,6 @@
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAthHie5ZktmV4Fb7U7izn6WGq6IRFQQug"></script>
     <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script>
 </body>
 </html>
