Arreglos en la ortografia, y version final

--- a/html/index.html
+++ b/html/index.html
@@ -82,7 +82,7 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" id="ciclista" checked>
                                 <label class="form-check-label" for="ciclista">
-                                    Clicista
+                                    Ciclista
                                 </label>
                             </div>
                             <div class="form-check">
